# i3dr_ur10-ros

./: CMakeLists.txt  package.xml
.github/workflows/: ros-build.yml
bundles/marker_bundle_0_1_2_3/: table_0_1_2_3.xml
calib/: wallace_robot_calibration.yaml
config/: routine_bottom_rov_mount.yaml  routine_top.yaml
example/: CalibratedTransform.yml  TransformPairsInput.yml
install/: i3dr_ur10_https.rosinstall  i3dr_ur10_ssh.rosinstall
launch/: deimos_ur10.launch  easy_handeye.launch  glue.launch  handeye_example.launch  i3dr_sbri.launch  kinova_titania.launch  test_yaml_param_load.launch  ur.launch  ur10.launch  ur10_SBRI_play.launch  ur10_SBRI_scan.launch  ur10_SBRI_scan2.launch  ur10_SBRI_scan_bag.launch  ur10_SBRI_scan_bag_rtabmap.launch  ur10_SBRI_scan_rtamap.launch  ur10_auto_map.launch  ur10_deimos.launch  ur10_hand_eye.launch  ur10_movit.launch  ur10_new.launch  ur10_sim.launch  ur10_titania.launch  ur10_triclops.launch  ur10_upload.launch  ur_calibration.launch
mesh/: interfacing_bracket.stl
rviz/: UR10_deimos.rviz  kinova_titania.rviz  ur10_deimos.rviz  ur10_phobos_nuclear.rviz  ur10_sbri.rviz  ur10_titania.rviz  ur10_triclops.rviz
src/: i3dr_hand_eye.cpp  i3dr_ur10_automap.py  i3dr_ur10_room_scan.py  i3dr_ur10_scan.py  i3dr_ur10_scan2.py  i3dr_ur10_scan_gui.py  kinova_get_joints.py  kinova_get_pose.py  kinova_move.py  kinova_move_joints_map.py  kinova_record_pose.py  test_yaml_params.py  ur10_move_calib.py
ui/: #roomScanUR10.glade#  roomScanUR10.glade  roomScanUR10.glade~
urdf/: aruco_marker.urdf.xacro  aruco_scene.urdf.xacro  deimos_ur10.urdf.xacro  i3dr_titania_kinova.urdf.xacro  i3dr_titania_ur10.urdf.xacro  titania_ur10.urdf.xacro
worlds/: room.world  test.world
